--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,14 @@
 .head {
     background: #fc0;
-    height: 100px;
+    height: 100vh;
+    width: 100vw;
     position: relative;
-    width: 100px;
+
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+  
+    
 }
 
 .face {
@@ -17,4 +20,6 @@
     top: 50%;
     transform: translate(-50%, -60%) rotate(90deg);
     
+    
 }
+
