--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 .head {
-    background: #fc0;
+    
     height: 100vh;
     width: 100vw;
     position: relative;
@@ -19,6 +19,9 @@
     position: absolute;
     top: 50%;
     transform: translate(-50%, -60%) rotate(90deg);
+    border-radius: 50%;
+    background: #fc0;
+    padding: 20px;
     
     
 }
